[package]
name = "rust-mdns-repeater"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dns-parser = "0.8.0"
env_logger = "0.11.1"
ipnet = "2.9.0"
log = "0.4.20"
nix = { version = "0.27.1", features = ["socket", "event", "net", "ioctl"] }
