[package]
name = "rust-mdns-repeater"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dns-parser = "0.8.0"
env_logger = "0.11.8"
ipnet = "2.11.0"
log = "0.4.20"
nix = { version = "0.30.1", features = [
  "socket",
  "event",
  "net",
  "ioctl",
  "fs",
] }
